Fix forum buttons overlapping
If buttons are enabled then .forum-post-votes-list now has a margin-top of 1.5em, as opposed to the new .5em it was recently given.

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.0.0
+@version        2.0.1
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2721,6 +2721,9 @@ if themep == classic {
 		}
 		img {
 		border-radius: 4px;
+		}
+		.forum-post-votes-list {
+			margin-top: 1.5em !important;
 		}
 
 		if buttons {
